DO280/web_appy/httpd24_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"kind":"Deployment","apiVersion":"apps/v1","metadata":{"name":"httpd24","creationTimestamp":null,"labels":{"app":"httpd24"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"httpd24"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"httpd24"}},"spec":{"containers":[{"name":"httpd-24","image":"registry.redhat.io/ubi9/httpd-24","resources":{}}]}},"strategy":{}},"status":{}}
  creationTimestamp: null
  labels:
    app: httpd24
  name: httpd24
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd24
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd24
    spec:
      containers:
      - image: registry.redhat.io/ubi9/httpd-24
        name: httpd-24
        ports:
          - containerPort: 8080
            protocol: TCP
        resources: {}
status: {}
