DO280/web_appy/https24_svc.yaml
apiVersion: v1
metadata:
  name: httpd24-service
kind: Service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd24
